modules/gdscript/tests/scripts/parser/errors/mixing_tabs_spaces.textonly.gd
func test():
    print("Using spaces")
	print("Using tabs")
